refactored test to be more meaningful